[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "pybind11==2.9.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command = [
    "git",
    "describe",
    "--dirty",
    "--tags",
    "--long",
    "--match",
    "v*[0-9]*",
]

[tool.pytest.ini_options]
testpaths = [ "pytest" ]
