[metadata]
name = dragonradio-tools
description = DragonRadio data collection and processing tools
url = "https://github.com/drexelwireless/dragonradio"
author = Geoffrey Mainland
author_email = mainland@drexel.edu

[options]
include_package_data = true
packages = find_namespace:
python_requires = >=3.6
install_requires =
  fastparquet==0.7.1
  h5py==3.4.0
  importlib_resources==5.3.0
  matplotlib==3.4.3
  numpy==1.21.2
  pandas==1.3.4
  pycairo==1.20.1
  PyGObject==3.42.0
  pyparsing<3
  python-snappy==0.6.0
  requests==2.26.0
  scipy==1.7.1

[options.entry_points]
console_scripts =
  drgui = dragonradio.tools.plot.radio.drgui:drgui
  dumpevents = dragonradio.tools.plot.radio.command_line:dump_events
  plot-mgen-metric = dragonradio.tools.plot.mgen.command_line:plot_mgen_metric
  plot-score = dragonradio.tools.plot.colosseum.command_line:plot_score
  plot-events = dragonradio.tools.plot.radio.command_line:plot_events
  plot-traffic = dragonradio.tools.plot.radio.command_line:plot_traffic
  plot-radio-metric = dragonradio.tools.plot.radio.command_line:plot_radio_metric
