[metadata]
name = dragonradio-tools
description = DragonRadio data collection and processing tools
url = "https://github.com/drexelwireless/dragonradio"
author = Geoffrey Mainland
author_email = mainland@drexel.edu

[options]
include_package_data = true
packages = find_namespace:
python_requires = >=3.6
install_requires =
  fastparquet
  h5py
  importlib_resources
  matplotlib
  numpy
  pandas
  pycairo
  PyGObject
  python-snappy
  requests
  scipy

[options.entry_points]
console_scripts =
  drgui = dragonradio.tools.plot.radio.drgui:drgui
  dumpevents = dragonradio.tools.plot.radio.command_line:dump_events
  plot-mgen-metric = dragonradio.tools.plot.mgen.command_line:plot_mgen_metric
  plot-score = dragonradio.tools.plot.colosseum.command_line:plot_score
  plot-events = dragonradio.tools.plot.radio.command_line:plot_events
  plot-traffic = dragonradio.tools.plot.radio.command_line:plot_traffic
  plot-radio-metric = dragonradio.tools.plot.radio.command_line:plot_radio_metric
