[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command = [
    "git",
    "describe",
    "--dirty",
    "--tags",
    "--long",
    "--match",
    "v*[0-9]*",
]
root = "../.."
write_to = "python/dragonradio/dragonradio/radio/version.py"
