[metadata]
name = dragonradio
description = Python support for DragonRadio
url = "https://github.com/drexelwireless/dragonradio"
author = Geoffrey Mainland
author_email = mainland@drexel.edu

[options]
packages = find_namespace:
python_requires = >=3.6
scripts =
  scripts/dragonradio-client
install_requires =
  ipykernel
  ipython
  libconf
  netifaces
  numpy
  pandas
  protobuf
  psutil
  python-daemon
  pyzmq
  scipy
  tables
zip_safe = False
